--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/style.css">
+    <script src="./src/services/ApiService.js"></script>
+    <script src="./src/components/Recipe.js"></script>
+    <script defer src="./src/index.js"></script>
     <title>Gluten-free Recipe Finder</title>
 </head>
 <body>
-    Welcome to Gluten-free Recipe finder
+   <h1>Welcome to Gluten-free Recipe Finder</h1>
+    <div id="main">
+    </div>
 </body>
 </html>
