--- a/index.html
+++ b/index.html
@@ -6,11 +6,20 @@
     <link rel="stylesheet" href="./assets/style.css">
     <script src="./src/services/ApiService.js"></script>
     <script src="./src/components/Recipe.js"></script>
+    <script src="./src/components/Modal.js"></script>
     <script defer src="./src/index.js"></script>
     <title>Gluten-free Recipe Finder</title>
 </head>
 <body>
-   <h1>Welcome to Gluten-free Recipe Finder</h1>
+   <h1>Welcome to Milk + Honey</h1>
+   <h2>Easy and delicious gluten-free desserts</h2>
+   <div id="myModal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <div id="modal-main"></div>
+    </div>
+    
+    </div>
     <div id="main">
     </div>
 </body>
