Add new recipe form

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="./src/components/Recipe.js"></script>
     <script src="./src/components/Modal.js"></script>
     <script defer src="./src/index.js"></script>
-    <title>Gluten-free Recipe Finder</title>
+    <title>Milk + Honey: A Gluten-free Recipe App</title>
 </head>
 <body>
    <h1>Welcome to Milk + Honey</h1>
