--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./assets/style.css">
     <script src="./src/services/ApiService.js"></script>
     <script src="./src/components/Recipe.js"></script>
+    <script src="./src/components/Detail.js"></script>
     <script src="./src/components/Modal.js"></script>
     <script defer src="./src/index.js"></script>
     <title>Milk + Honey: A Gluten-free Recipe App</title>
@@ -18,7 +19,6 @@
       <span class="close">&times;</span>
       <div id="modal-main"></div>
     </div>
-    
     </div>
     <div id="main">
     </div>
