Add fetch to users

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     </div>
     </div>
     <div id="main">
+        <form>
+            <label for="username">Username:</label><br>
+            <input type="text" id="username" name="username"><br>
+            <input type="submit" value="Submit">
+        </form>
     </div>
 </body>
 </html>
