--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <script src="./src/components/Detail.js"></script>
     <script src="./src/components/Modal.js"></script>
     <script defer src="./src/index.js"></script>
-    <title>Milk + Honey: A Gluten-free Recipe App</title>
+    <title>SWEET TOOTH: A Gluten-free Recipe App</title>
 </head>
 <body>
-   <h1>Welcome to Milk + Honey</h1>
-   <h2>Easy and delicious gluten-free desserts</h2>
+   <div class="hero-image">
+       </div>
    <div id="myModal" class="modal">
     <div class="modal-content">
       <span class="close">&times;</span>
